--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background-color: yellow;
+    background-color: #1c132e;
     height: 100vh;
     font-family: 'Poppins', sans-serif;
     position: relative;
