--- a/style.css
+++ b/style.css
@@ -1098,20 +1098,25 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 70vw;
+    width: 75%;
     background-color: #242424;
     border-radius: 5px;
     padding: 20px;
+    flex-direction: column;
     display: none;
     justify-content: space-around;
     gap: 35px;
 }
 
-.iframe-btns{
+.content-project{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
+    justify-content: space-around;
+    gap: 35px;
+}
+
+.video-projeto{
+    width: 50rem;
+    height: 25rem;
 }
 
 .project-sobre{
@@ -1123,25 +1128,22 @@ a {
 .project-name{
     font-size: 2em;
     color: #815BD4;
-    text-shadow: 1px 1px 1px #f2f2f2;
-    text-align: center;
 }
 
 .project-description,
 .used-project{
-    font-size: .8em;
-    font-weight: 300;
+    font-size: .9rem;
+    font-weight: 200;
     color: #f2f2f2;
 }
 
-.content-project{
+.info{
     width: 50%;
 }
 
 .btns {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 35px;
 }
 
