ajuste no menu mobile

--- a/style.css
+++ b/style.css
@@ -1649,6 +1649,11 @@ footer h3 {
         font-size: 1.6em;
     }
 
+    .content{
+        position: fixed;
+        right: 25px;
+    }
+
     .toggle-switch {
         width: 50px;
         height: 25px;
