--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     font-family: 'Poppins', sans-serif;
     position: relative;
     overflow-x: hidden;
+    max-width: 100vw;
 }
 
 body.mostrar-before::before {
